--- a/app/source/sass/modules/_m-navigation.sass
+++ b/app/source/sass/modules/_m-navigation.sass
@@ -8,8 +8,6 @@
   width: 100%
   margin: 0
   padding: 0
-  +breakpoint($breakpoint-wide-portrait, $no-query: '.no-mqs')
-    top: 20px
 
 .m-navigation--top-item
   margin: 13px 0
@@ -31,6 +29,8 @@
   width: 100%
   margin: 0
   padding: 0
+  +breakpoint($breakpoint-wide-portrait, $no-query: '.no-mqs')
+    bottom: 20px
 
 .m-navigation--bottom-item
   margin: 10px 0
